2022-09-06  Jay Berkenbilt  <ejb@ql.org>

        * For all bounding box methods in QPDFPageObjectHelper other than
        MediaBox, add a parameter `copy_if_fallback`, and add comments
        explaining in depth exactly what copy_if_shared and
        copy_if_fallback mean. Fixes #664.

        * Add new methods getArtBox and getBleedBox to
        QPDFPageObjectHelper, completing the set of bounding box methods.

        * Add == equality for QPDFObjectHandle. Two QPDFObjectHandle
        objects are equal if they point to the same underlying object,
        meaning changes to one will be reflected in the other.

        * The --show-encryption option now works even if a correct
        password is not supplied. If you were using --show-encryption to
        test whether you have the right password, use --requires-password
        instead. Fixes #598.

2022-09-05  Jay Berkenbilt  <ejb@ql.org>

        * Add a move constructor to Buffer, making it possible to move
        rather than copy the internal buffer. Thanks to jbarlow83 for the
        contribution.

2022-09-02  Jay Berkenbilt  <ejb@ql.org>

        * Add new QPDF::create() factory method that returns
        std::shared_ptr<QPDF>.

        * Prevent copying/assigning to QPDF objects in the API. It has
        never been safe to do this, but the API wasn't preventing it.

2022-09-01  Jay Berkenbilt  <ejb@ql.org>

        * Remove QPDFObject.hh from include/qpdf. The only reason to
        include was to get QPDFObject::object_type_e. Instead, include
        qpdf/Constants.h, and change `QPDFObject::ot_` to `::ot_`.

        * More optimizations and cleanup from m-holger (#726, #730)
        including major refactor of QPDF's internal representations of
        objects. In addition to a large performance improvement, this also
        made it possible for QPDFObjectHandle::getOwningQPDF() to return a
        null pointer if the owning QPDF had been destroyed. (A more