@@ -1,3 +1,8 @@
+2022-09-07  Jay Berkenbilt  <ejb@ql.org>
+
+        * Add QPDFObjectHandle::getQPDF(), which returns a reference, as
+        an alternative to QPDFObjectHandle::getOwningQPDF().
+
 2022-09-06  Jay Berkenbilt  <ejb@ql.org>
 
         * For all bounding box methods in QPDFPageObjectHelper other than
